--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  align-items: center;
+  background-color: #555555;
 }
 
 .App-logo {
@@ -15,13 +19,14 @@
 
 .App-header {
   background-color: #424242;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  max-width: 1200px;
+  margin-bottom: 2px;
 }
 
 .App-link {
@@ -35,4 +40,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-body {
+  width: 1200px;
+  background-color: #424242;
+}
+
+.App-movie-tiles {
+  display: flex;
+  margin-left: 50px;
+  margin-top: 50px;
 }
