--- a/src/components/MovieTile/MovieTile.css
+++ b/src/components/MovieTile/MovieTile.css
@@ -1,5 +1,23 @@
 .movie-poster {
-    width: 200px;
-    height: 300px;
-    margin-right: 20px;
-  }
+  width: 322px;
+  height: 455px;
+  top: 599px;
+  left: 495px;
+  gap: 0px;
+  opacity: 0px;
+}
+.movie-tile-container:hover .context-menu {
+  opacity: 1;
+}
+.movie-tile-container {
+  color: #ffffff;
+  opacity: 0.7;
+  font-size: 18px;
+  font-family: "Montserrat";
+}
+.movie-year {
+  border-color: #ffffff;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 1px;
+}
