--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   text-align: center;
   align-items: center;
   background-color: #555555;
+  font-family: 'Montserrat';
 }
 
 .App-logo {
@@ -25,7 +26,7 @@
   align-items: center;
   justify-content: center;
   color: white;
-  max-width: 1200px;
+  width: 1200px;
   margin-bottom: 2px;
 }
 
