--- a/src/components/SortControl/SortControl.css
+++ b/src/components/SortControl/SortControl.css
@@ -1,12 +1,27 @@
 .sort-control {
-    display: flex;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+    
   }
   
   .sort-control label {
     margin-right: 10px;
+    opacity: 0.7;
+    color: #FFFFFF;
   }
   
-  .sort-control select {
-    margin-left: 10px;
+  .sort-select {
+    all: unset;
+    background: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: inline-block;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: transparent;
+  }
+
+  .sort-select option{
+    background-color: #232323;
+    padding: 5px;
   }
