added MovieListPage component, improved Search, Filter, Search, improved styles

--- a/src/components/MovieForm/MovieForm.css
+++ b/src/components/MovieForm/MovieForm.css
@@ -1,17 +1,42 @@
 .movie-form {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-  
-  .form-field {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .movie-form input,
-  .movie-form textarea {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-  }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.movie-form input,
+.movie-form textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+}
+.movie-form-buttons{
+position: relative;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+
+.movie-form-buttons-reset{
+all:unset;
+position: absolute;
+right: 160px;
+border: 1px solid #f65261;
+background-color: #232323;
+padding: 10px 40px;
+border-radius: 5px;
+}
+.movie-form-buttons-submit{
+all:unset;
+position: absolute;
+right: 10px;
+background-color: #f65261;
+color: #ffffff;
+padding: 10px 40px;
+border-radius: 5px;
+
+}
