--- a/src/App.css
+++ b/src/App.css
@@ -4,54 +4,5 @@
   text-align: center;
   align-items: center;
   background-color: #555555;
-  font-family: 'Montserrat';
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #232323;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  width: 1200px;
-  margin-bottom: 2px;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.App-body {
-  width: 1200px;
-  background-color: #232323;
-}
-
-.App-movie-tiles {
-  display: flex;
-  margin-left: 50px;
-  margin-top: 50px;
-  /* display: grid;
-  grid-template-rows: auto auto; */
+  font-family: "Montserrat";
 }
