--- a/src/components/GenreSelector/GenreSelector.css
+++ b/src/components/GenreSelector/GenreSelector.css
@@ -1,12 +1,15 @@
 .genre-selector-container{    
   display: flex;
   justify-content: flex-start;
+  position: absolute;
+  top: 10px;
+  left: 40px;
 }
 
 .genre-selector-container button{
     all: unset;
     background: none;
-    padding: 5px 10px;
+    padding: 0px 7.5px;
     cursor: pointer;
     font-size: 16px;
     display: inline-block;
