--- a/src/components/MovieTile/MovieTile.css
+++ b/src/components/MovieTile/MovieTile.css
@@ -14,6 +14,7 @@
   opacity: 0.7;
   font-size: 18px;
   font-family: "Montserrat";
+  position: relative;
 }
 .movie-year {
   border-color: #ffffff;
