--- a/src/components/MovieTile/components/ContextMenu.css
+++ b/src/components/MovieTile/components/ContextMenu.css
@@ -14,6 +14,11 @@ li:hover {
 }
 .context-menu {
   position: absolute;
+  top: 10px;
+  right: 20px;  
+}
+.context-menu ul{
+  right: 20px
 }
 .context-menu button {
   transform: rotate(-90deg);
@@ -28,4 +33,5 @@ li:hover {
   font-size: 16px;
   cursor: pointer;
   outline: none;
+  font-weight: 500px;
 }
