--- a/src/components/MovieDetails/MovieDetails.css
+++ b/src/components/MovieDetails/MovieDetails.css
@@ -3,8 +3,7 @@
   justify-content: center;
   align-items: center;
   margin: 20px;
-  
-position: relative;
+  position: relative;
 }
 
 .movie-poster {
@@ -27,7 +26,7 @@ position: relative;
   right: 10px;
   border: none;
   background-color: #232323;
-  color: #F65261;
+  color: #f65261;
   padding: 8px 12px;
   border-radius: 5px;
   cursor: pointer;
