--- a/src/components/MovieTile/MovieTile.css
+++ b/src/components/MovieTile/MovieTile.css
@@ -1,15 +1,8 @@
-.movie-poster {
-  width: 322px;
-  height: 455px;
-  top: 599px;
-  left: 495px;
-  gap: 0px;
-  opacity: 0px;
-}
 .movie-tile-container:hover .context-menu {
   opacity: 1;
 }
 .movie-tile-container {
+  width: calc(100% / 3);
   color: #ffffff;
   opacity: 0.7;
   font-size: 18px;
