--- a/src/components/MovieListPage/styles.module.css
+++ b/src/components/MovieListPage/styles.module.css
@@ -1,4 +1,4 @@
-.app-movie-tiles {
+.appMovieTiles {
   display: flex;
   flex-wrap: wrap;
   margin-left: 0px;
@@ -6,7 +6,7 @@
   position: relative;
 }
 
-.total-count {
+.totalCount {
   color: #ffffff;
   position: absolute;
   font-size: 20px;
