--- a/src/components/MovieTile/components/styles.module.css
+++ b/src/components/MovieTile/components/styles.module.css
@@ -9,18 +9,18 @@
   text-align: center;
 }
 
-li:hover {
+.menu li:hover {
   background-color: #f65261;
 }
-.context-menu {
+.contextMenu {
   position: absolute;
   top: 10px;
   right: 20px;  
 }
-.context-menu ul{
+.contextMenu ul{
   right: 20px
 }
-.context-menu button {
+.contextMenu button {
   transform: rotate(-90deg);
   transform-origin: center;
   text-align: center;
