--- a/src/components/MovieTile/styles.module.css
+++ b/src/components/MovieTile/styles.module.css
@@ -1,7 +1,8 @@
-.movie-tile-container:hover .context-menu {
+.movieTileContainer:hover .context-menu {
   opacity: 1;
 }
-.movie-tile-container {
+
+.movieTileContainer {
   width: calc(100% / 3);
   color: #ffffff;
   opacity: 0.7;
@@ -9,9 +10,16 @@
   font-family: "Montserrat";
   position: relative;
 }
-.movie-year {
+
+.movieYear {
   border-color: #ffffff;
   border: 1px solid white;
   border-radius: 10px;
   padding: 1px;
+}
+
+.moviePoster {
+  width: 200px;
+  height: 300px;
+  margin-right: 20px;
 }
