--- a/src/components/SortControl/styles.module.css
+++ b/src/components/SortControl/styles.module.css
@@ -1,4 +1,4 @@
-.sort-control {
+.sortControl {
   display: flex;
   justify-content: flex-end;
   position: absolute;
@@ -6,13 +6,13 @@
   right: 10px;    
   }
   
-  .sort-control label {
+  .sortControl label {
     margin-right: 10px;
     opacity: 0.7;
     color: #FFFFFF;
   }
   
-  .sort-select {
+  .sortSelect {
     all: unset;
     background: none;
     cursor: pointer;
@@ -23,7 +23,7 @@
     background-color: transparent;
   }
 
-  .sort-option{
+  .sortOption{
     all:unset;
     background-color: #232323;
     padding: 5px;
